--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.2",
+    "@tensorflow-models/pose-detection": "^2.0.0",
+    "@tensorflow-models/posenet": "^2.2.2",
+    "@tensorflow/tfjs": "^3.18.0",
     "aos": "^3.0.0-beta.6",
     "firebase": "^9.9.0",
     "react": "^18.2.0",
@@ -16,6 +19,7 @@
     "react-flatpickr": "^3.10.13",
     "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.2",
+    "react-webcam": "^7.0.1",
     "sticky-js": "^1.3.0"
   },
   "devDependencies": {
