--- a/android/local.properties
+++ b/android/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jul 16 00:43:18 IST 2022
-sdk.dir=C\:\\Users\\harsh\\AppData\\Local\\Android\\Sdk
+#Sat Jul 16 15:40:38 IST 2022
+sdk.dir=C\:\\Users\\Ananya\\AppData\\Local\\Android\\Sdk
