--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "com.google.truth:truth:1.1.3"
 
-
+    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.6'
