--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.tensorflow.lite.examples.poseestimation" >
+    package="org.tensorflow.lite.examples.poseestimation">
 
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -14,7 +14,13 @@
         android:label="@string/tfe_pe_app_name"
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PoseEstimation" >
+        android:theme="@style/Theme.PoseEstimation">
+        <activity
+            android:name=".AnalysisActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MajorActivity"
+            android:exported="false" />
         <activity
             android:name=".SignUpActivity"
             android:exported="false" />
