Modifies merged UI

--- a/android/local.properties
+++ b/android/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Jul 16 15:40:38 IST 2022
-sdk.dir=C\:\\Users\\Ananya\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\harsh\\AppData\\Local\\Android\\Sdk
