--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.3.0",
     "react-transition-group": "^4.4.2",
     "react-webcam": "^7.0.1",
+    "recharts": "^2.1.12",
     "sticky-js": "^1.3.0"
   },
   "devDependencies": {
