--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,6 +87,8 @@ dependencies {
     def nav_version = "2.5.0"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
+    implementation 'com.androidplot:androidplot-core:1.2.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
 
 
 }
