--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
     "@tensorflow/tfjs": "^3.18.0",
     "aos": "^3.0.0-beta.6",
     "firebase": "^9.9.0",
+    "fs": "^0.0.1-security",
+    "memfs": "^4.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
